[tool.poetry]
name = "child-mind-institute"
version = "0.1.0"
description = ""
authors = ["Kusukawa Naoya <kusukawa93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "1.26.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
optuna = "^4.0.0"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
matplotlib = "^3.9.2"
hydra-core = "^1.3.2"
catboost = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
